[tool.poetry]
name = "streamlit-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.65.2"
pandas = "^1.1.1"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
